<resources>
    <string name="app_name">TWOFOOTBALL</string>
    <string name="btnPlay">PLAY</string>
    <string name="btnReturn">RETURN</string>
    <string name="txtLevels">LEVELS</string>
    <string name="txtPergunta1">Qual é este jogador?</string>
    <string name="Level1">1</string>
    <string name="Level1A">A</string>
    <string name="Level1B">B</string>
    <string name="Level1C">C</string>
    <string name="txtAlternativaF1A">Jogador A</string>
    <string name="txtAlternativaF1B">Jogador B</string>
    <string name="txtAlternativaF1C">Jogador C</string>
    <string name="qual_este_jogador">Qual é este jogador?</string>
    <string name="avisoErro">VOCÊ ERROU!!!</string>
    <string name="voce_errou">VOCE ERROU!!!</string>
    <string name="tente_novamente">TENTE NOVAMENTE</string>
    <string name="todo">TODO</string>
    <string name="twofootball">TWOFOOTBALL</string>
    <string name="qual_o_ltimo_ganhador_da_bola_de_ouro">Qual o último ganhador da bola de ouro?</string>
    <string name="neymar">Neymar</string>
    <string name="cristiano_ronaldo">Cristiano Ronaldo</string>
    <string name="lionel_messi">Lionel Messi</string>
    <string name="ltimo_campe_o_do_mundial_de_clubes">Último campeão do mundial de clubes?</string>
    <string name="corinthians">Corinthians</string>
    <string name="s_o_paulo">São Paulo</string>
    <string name="santos">Santos</string>
    <string name="qual_este_jogador2">Qual é este jogador?</string>
    <string name="william">William</string>
    <string name="renato_augusto">Renato Augusto</string>
    <string name="paulinho">Paulinho</string>
    <string name="pa_s_da_copa_do_mundo_2022">País da copa do mundo 2022?</string>
    <string name="jap_o">Japão</string>
    <string name="china">China</string>
    <string name="catar">Catar</string>
    <string name="qual_este_jogador3">Qual é este jogador?</string>
    <string name="pedro">Pedro</string>
    <string name="gabriel_barbosa">Gabriel Barbosa</string>
    <string name="william_ar_o">William Arão</string>
    <string name="rony">Rony</string>
    <string name="danilo">Danilo</string>
    <string name="deyverson">Deyverson</string>
</resources>