<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2761"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/txtPergunta1"
        android:layout_width="260dp"
        android:layout_height="134dp"
        android:text="@string/qual_este_jogador2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btnLevel10"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginBottom="76dp"
        android:onClick="legal"
        android:text="@string/Level1A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <Button
        android:id="@+id/btnLevel"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginBottom="40dp"
        android:onClick="legal"
        android:text="@string/Level1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLevel11"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:onClick="next"
        android:text="@string/Level1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <Button
        android:id="@+id/btnReturn2"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:onClick="back"
        android:text="@string/btnReturn"
        app:layout_constraintBottom_toTopOf="@+id/btnLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/txtAlternativaF1A"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/william"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        tools:text="Wiliam"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAlternativaF1B"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/renato_augusto"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toEndOf="@+id/btnLevel11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        tools:text="Renato Augusto"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAlternativaF1C"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/paulinho"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:text="Paulinho"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="143dp"
        android:layout_height="185dp"
        android:layout_marginTop="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@drawable/download_removebg_preview__3_"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>