<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2761"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/txtPergunta1"
        android:layout_width="260dp"
        android:layout_height="134dp"
        android:layout_marginBottom="34dp"
        android:text="@string/qual_o_ltimo_ganhador_da_bola_de_ouro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLevel10"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:onClick="next"
        android:text="@string/Level1A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/btnLevel"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:onClick="legal"
        android:text="@string/Level1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAlternativaF1C"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/btnLevel11"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:onClick="legal"
        android:text="@string/Level1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/btnReturn2"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:onClick="back"
        android:text="@string/btnReturn"
        app:layout_constraintBottom_toTopOf="@+id/btnLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAlternativaF1A"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lionel_messi"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        tools:text="Lionel Messi"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAlternativaF1B"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cristiano_ronaldo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817"
        tools:text="Cristiano Ronaldo"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAlternativaF1C"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/neymar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956"
        tools:text="Neymar"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="235dp"
        android:layout_height="273dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/bola_de_ouro_removebg_preview__1_"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>